@@ -83,6 +83,7 @@ p4have=org.apache.tools.ant.taskdefs.optional.perforce.P4Have
 p4sync=org.apache.tools.ant.taskdefs.optional.perforce.P4Sync
 p4edit=org.apache.tools.ant.taskdefs.optional.perforce.P4Edit
 p4submit=org.apache.tools.ant.taskdefs.optional.perforce.P4Submit
+p4counter=org.apache.tools.ant.taskdefs.optional.perforce.P4Counter
 javah=org.apache.tools.ant.taskdefs.optional.Javah
 ccupdate=org.apache.tools.ant.taskdefs.optional.clearcase.CCUpdate
 cccheckout=org.apache.tools.ant.taskdefs.optional.clearcase.CCCheckout
